--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mono",
+  "name": "@safeweb3/monolithic",
   "private": true,
   "devDependencies": {
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.11",
     "lerna": "^3.15.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tsdx": "^0.13.2",
-    "typescript": "^3.9.7"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tsdx": "^0.14.1",
+    "typescript": "^4.4.4"
   },
   "workspaces": [
     "packages/*"
@@ -19,10 +19,5 @@
     "test": "lerna run test --",
     "build": "lerna run build",
     "prepublish": "lerna run prepublish"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "semi": true
   }
 }
